<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">EssIchNicht</string>
    <string name="auto_update">autoUpdate</string>
    <string name="automatic_database_updates">Datenbank automatisch aktualisieren</string>
    <string name="back">Zurück</string>
    <string name="cancel">abbrechen</string>
    <string name="change_hint">Tippen Sie auf einen Inhaltsstoff, um eine Angabe zu ändern.</string>
    <string name="contains">enthält:</string>
    <string name="contains_question">Ist #allergen in #product enthalten?</string>
    <string name="create_allergen">neuen Inhaltsstoff hinzufügen</string>
    <string name="dedication">Diese Anwendung ist Dorett Pretsch gewidmet, welche mich im Jahre 2012 dazu inspiriert hat. Ich danke außerdem Kathi und Gerd, sowie allen fleißigen Testern.\n\n—Stephan Richter—\nwww.srsoftware.de</string>
    <string name="dont_sync">Nein. Nicht synchronisieren.</string>
    <string name="dont_sync_shutdown">Nein. Programm beenden.</string>
    <string name="dont_know">keine Ahnung</string>
    <string name="enter_allergen">Neuen Inhaltsstoff in Datenbank eintragen:</string>
    <string name="enter_product_name">Bitte geben Sie einen Namen für das Produkt (#product) ein.</string>
    <string name="expired">Sie nutzen eine Testversion des Programmes. Diese Testversion ist abgelaufen.</string>
    <string name="fdroid">FDoid Store</string>
    <string name="free_version_hint">Sie nutzen eine kostenlose Version des Programmes. In der kostenlosen Version können Sie maximal zwei Nahrungsmittel aktivieren. Um mehr Nahrungsmittel wählen zu können, können Sie die Vollversion kaufen oder sich das Programm aus dem Quellcode selbst erstellen.</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint">Hinweis</string>
    <string name="info">Info</string>
    <string name="learning_mode">Lernmodus\n\nZurück-Taste benutzen, um wieder in den normalen Modus zu kommen</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="moreInfo">mehr Informationen darüber</string>
    <string name="name_of_allergen_here">&lt;Bezeichnung&gt;</string>
    <string name="network_problem">Es konnte keine Verbindung zur Online-Datenbank hergestellt werden!</string>
    <string name="no">Nein</string>
    <string name="no_allergens_in_database">Es befinden sich noch keine Inhaltsstoffe in der Datenbank!</string>
    <string name="no_allergens_selected">Noch keine Inhaltsstoffe ausgewählt!</string>
    <string name="no_scanner">Der ZXing-Barcodescanner ist nicht installiert. Dieser ist aber notwendig. Bitte installieren Sie diesen!</string>
    <string name="not_contained">enthält nicht:</string>
    <string name="ok">Ok</string>
    <string name="ok_always_sync">Ja, bei Bedarf stets aktualisieren</string>
    <string name="performing_update">Update der Stoffdatenbank wird durchgeführt. Bitte warten...</string>
    <string name="play">Play Store</string>
    <string name="product_code">Produkt-Code</string>
    <string name="product_name">Name des Produkts</string>
    <string name="save_value">speichern</string>
    <string name="scan">Scannen!</string>
    <string name="scan_hint">Scannen Sie einen Barcode, um Informationen zu einem Produkt zu erhalten.</string>
    <string name="fdroidUrl">https://f-droid.org/repository/browse/?fdid=com.google.zxing.client.android</string>
    <string name="select_allergens">Wählen Sie die Stoffe, die Sie nicht mögen.</string>
    <string name="select_contained_allergens">Wählen Sie dann, welche Stoffe das Produkt enthält</string>
    <string name="server_not_available">Es konnte keine Verbingung zum Server hergestellt werden.</string>
    <string name="sync_complete">Synchronisation abgeschlossen!</string>
    <string name="sync_once">Jetzt aktualisieren, stets fragen</string>
    <string name="sync_warning">Diese Aktion erfordert das Aktualisieren der lokalen Datenbank. Dabei können unter Umständen große Datenmengen heruntergeladen werden. Fortfahren?</string>
    <string name="title_activity_allergen_selection">Inhaltsstoffe auswählen</string>
    <string name="title_activity_create_allergen">Inhaltsstoff eintragen</string>
    <string name="title_activity_info">Information &amp; Widmung</string>
    <string name="title_activity_learning">Training - EssIchNicht</string>
    <string name="title_activity_main">EssIchNicht</string>
    <string name="title_activity_preferences">Einstellungen - EssIchNicht</string>
    <string name="title_activity_scan">EssIchNicht</string>
    <string name="title_activity_synchronize">Aktualisierung - EssIchNicht</string>
    <string name="unclear">unklar:</string>
    <string name="unknown_product">Dieses Produkt ist noch nicht in der Datenbank. Lernmodus wird gestartet...</string>
    <string name="update">Aktualisierung ausführen</string>
    <string name="update_info">Damit nicht ständig eine Internetverbindung benötigt wird, benutzt die App eine Kopie eines Teils der Online-Datenbank auf diesem Gerät. Diese lokale Kopie muss jedoch ab und zu mit der Internet-basierten \"Mutter\"-Datenbank abgeglichen werden. Das kann automatisch im Hintergrund passieren, oder von Ihnen händisch über das Menü ausgeführt werden, wenn es Ihnen passt.</string>
    <string name="warning">Warnung!</string>
    <string name="welcome">Wilkommen!</string>
    <string name="will_shut_down">Anwendung wird nun beendet.</string>
    <string name="yes">Ja</string>
    <string name="playUrl">https://play.google.com/store/apps/details?id=com.google.zxing.client.android</string>
    <string name="app_picker_name">Anwendungen</string>
  <string name="bookmark_picker_name">Lesezeichen</string>
  <string name="button_add_calendar">Termin hinzufügen</string>
  <string name="button_add_contact">Kontakt hinzufügen</string>
  <string name="button_book_search">Büchersuche</string>
  <string name="button_cancel">Abbruch</string>
  <string name="button_custom_product_search">Benutzersuche</string>
  <string name="button_dial">Nummer wählen</string>
  <string name="button_email">E-Mail senden</string>
  <string name="button_get_directions">Route berechnen</string>
  <string name="button_mms">MMS senden</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Browser öffnen</string>
  <string name="button_product_search">Produktsuche</string>
  <string name="button_search_book_contents">Buchinhalt durchsuchen</string>
  <string name="button_share_app">Anwendung</string>
  <string name="button_share_bookmark">Lesezeichen</string>
  <string name="button_share_by_email">Als E-Mail weitergeben</string>
  <string name="button_share_by_sms">Als SMS weitergeben</string>
  <string name="button_share_clipboard">Zwischenablage</string>
  <string name="button_share_contact">Kontakt</string>
  <string name="button_show_map">Karte anzeigen</string>
  <string name="button_sms">SMS senden</string>
  <string name="button_web_search">Im Web suchen</string>
  <string name="button_wifi">Mit diesem WLAN verbinden</string>
  <string name="contents_contact">Kontaktinfo</string>
  <string name="contents_email">E-Mail Adresse</string>
  <string name="contents_location">Koordinaten</string>
  <string name="contents_phone">Telefonnummer</string>
  <string name="contents_sms">SMS Adresse</string>
  <string name="contents_text">Text</string>
  <string name="history_clear_one_history_text">Löschen</string>
  <string name="history_clear_text">Verlauf löschen</string>
  <string name="history_email_title">Barcode Scanner Verlauf</string>
  <string name="history_empty">Leer</string>
  <string name="history_empty_detail">Es wurden keine Barcodes aufgezeichnet.</string>
  <string name="history_send">Verlauf senden</string>
  <string name="history_title">Verlauf</string>
  <string name="menu_encode_mecard">MECARD verwenden</string>
  <string name="menu_encode_vcard">vCard verwenden</string>
  <string name="menu_help">Hilfe</string>
  <string name="menu_history">Verlauf</string>
  <string name="menu_share">Senden</string>
  <string name="msg_bulk_mode_scanned">Bulk-Modus: Barcode gescannt und gespeichert</string>
  <string name="msg_camera_framework_bug">Mit der Android-Kamera ist leider ein Fehler aufgetreten. Es könnte sein, dass Sie das Gerät neu starten müssen.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadaten</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Positionieren Sie den Barcode innerhalb des Rechteckes.</string>
  <string name="msg_default_time">Zeit</string>
  <string name="msg_default_type">Typ</string>
  <string name="msg_encode_contents_failed">Aus den Daten kann kein Barcode erzeugt werden.</string>
  <string name="msg_error">Fehler</string>
  <string name="msg_google_books">Google</string>
  <string name="msg_google_product">Google</string>
  <string name="msg_intent_failed">Die gewünschte Applikation kann nicht geöffnet werden. Der Barcode könnte ungültig sein.</string>
  <string name="msg_invalid_value">Ungültiger Wert</string>
  <string name="msg_redirect">Umleiten</string>
  <string name="msg_sbc_book_not_searchable">Dieses Buch kann nicht durchsucht werden.</string>
  <string name="msg_sbc_failed">Bei der Suche ist ein Fehler aufgetreten.</string>
  <string name="msg_sbc_no_page_returned">Keine Seite zurückgeliefert.</string>
  <string name="msg_sbc_page">Seite</string>
  <string name="msg_sbc_results">Ergebnisse</string>
  <string name="msg_sbc_searching_book">Durchsuche Buch\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Textschnipsel nicht verfügbar.</string>
  <string name="msg_share_explanation">Sie können Daten weitergeben, indem Sie einen Barcode auf Ihrem Bildschirm erzeugen und mit einem anderen Handy einscannen.</string>
  <string name="msg_share_text">Oder geben Sie hier einen Text ein</string>
  <string name="msg_sure">Sind Sie sicher?</string>
  <string name="msg_unmount_usb">Leider kann nicht auf die SD-Karte zugegriffen werden.</string>
  <string name="preferences_actions_title">Wenn ein Barcode erkannt wurde\u2026</string>
  <string name="preferences_auto_focus_title">Autofokus verwenden</string>
  <string name="preferences_auto_open_web_title">Öffnen Sie Webseiten automatisch</string>
  <string name="preferences_bulk_mode_summary">Scannt und speichert mehrere Barcodes nacheinander</string>
  <string name="preferences_bulk_mode_title">Massenscan</string>
  <string name="preferences_copy_to_clipboard_title">In die Zwischenablage kopieren</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Platzhalter: %s = Inhalt, %f = Format, %t = Typ</string>
  <string name="preferences_custom_product_search_title">Eigene Such-URL</string>
  <string name="preferences_decode_1D_industrial_title">1D-Industrie</string>
  <string name="preferences_decode_1D_product_title">1D-Produkt</string>
  <string name="preferences_decode_Aztec_title">Aztec</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Geräteabhängige Problemumgehung</string>
  <string name="preferences_disable_barcode_scene_mode_title">Kein Barcode-Szene-Modus</string>
  <string name="preferences_disable_continuous_focus_summary">Nur Standard-Fokus-Modus verwenden</string>
  <string name="preferences_disable_continuous_focus_title">Kein kontinuierlicher Fokus</string>
  <string name="preferences_disable_exposure_title">Keine Belichtungsmessung</string>
  <string name="preferences_disable_metering_title">Keine Dosierung</string>
  <string name="preferences_front_light_auto">Automatisch</string>
  <string name="preferences_front_light_off">Aus</string>
  <string name="preferences_front_light_on">Ein</string>
</resources>