<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.srsoftware.allergyscan.SynchronizeActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sync_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_warning"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/alway_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_always_sync" />

        <Button
            android:id="@+id/once_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_once" />

        <Button
            android:id="@+id/dont_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_autosync" />

    </LinearLayout>

</FrameLayout>
